envoy/envoy.yaml
admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 6003
static_resources:
  listeners:
  - name: listener_0
    address:
      socket_address: { address: 0.0.0.0, port_value: 6002 }
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
          stat_prefix: egress_http
          route_config:
            name: routes
            virtual_hosts:
            - name: service
              domains: ["service"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: service }
          http_filters:
            - name: envoy.filters.http.router
  clusters:
  - name: service
    type: STRICT_DNS
    connect_timeout: 1s
    load_assignment:
      cluster_name: service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: service
                port_value: 443
    transport_socket:
      name: envoy.transport_sockets.tls
